--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
-  "name": "bootstrap-timepicker",
-  "description": "Timepicker widget for Twitter Bootstrap 2.*",
-  "version": "0.2.6",
-  "homepage": "http://jdewit.github.com/bootstrap-timepicker",
-  "author": {
-    "name": "Joris de Wit",
-    "email": "joris.w.dewit@gmail.com",
-    "url": "http://jorisdewit.ca"
-  },
+  "name": "bs3-timepicker",
+  "description": "Timepicker widget for Twitter Bootstrap 3.x",
+  "version": "3.1.1",
+  "homepage": "http://icai.github.com/bs3-timepicker",
+  "author": "Joris de Wit <joris.w.dewit@gmail.com> (http://jorisdewit.ca)",
   "repository": {
     "type": "git",
-    "url": "git://github.com/jdewit/bootstrap-timepicker"
+    "url": "git://github.com/icai/bs3-timepicker"
   },
   "scripts": {
     "test": "bower install; grunt test;"
   },
   "bugs": {
-    "url": "https://github.com/jdewit/bootstrap-timepicker/issues"
+    "url": "https://github.com/icai/bs3-timepicker/issues"
   },
   "devDependencies": {
     "grunt-cli": "~0.1",
@@ -29,5 +25,11 @@
     "grunt-contrib-watch": "~0.4.3",
     "grunt-shell": "~0.2.2",
     "grunt-bump": "0.0.11"
-  }
+  },
+  "main": "Gruntfile.js",
+  "keywords": [
+    "timepicker",
+    "bootstrap3"
+  ],
+  "license": "MIT"
 }
